--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-pdf/renderer": "^4.3.1",
     "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
